Update mainSections in Hugo configuration to remove deprecated entry

--- a/hugo.toml
+++ b/hugo.toml
@@ -23,7 +23,7 @@ pagerSize = 6
 
 [Params]
 selfHosted = true
-mainSections = ["post","posts"]
+mainSections = ["posts"]
 dateFormat = "2025/01/01"
 comments = false
 readingTime = true
