--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,104 @@
-baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
-theme = 'lightbi-hugo'
+baseURL = "https://lightbi-hugo-theme.netlify.app/"
+DefaultContentLanguage = "ja"
+defaultContentLanguageInSubdir = false
+languageCode = "ja-JP"
+title = "LogLife"
+theme = "lightbi-hugo"
+metaDataFormat = "yaml"
+pygmentsStyle = "trac"
+#pygmentsUseClasses = true
+#pygmentsCodeFences = true
+pygmentsCodefencesGuessSyntax = true
+#pygmentsUseClassic = true
+#pygmentOptions = "linenos=inline"
+#disqusShortname = "XXX"
+#googleAnalytics = "XXX"
+enableRobotsTXT = true
+enableGitInfo = false
+summaryLength  = "4"
+ignoreLogs = ['warning-goldmark-raw-html']
+
+[pagination]
+pagerSize = 6
+
+[Params]
+selfHosted = true
+mainSections = ["posts"]
+dateFormat = "2025/01/01"
+comments = false
+readingTime = true
+wordCount = true
+useHLJS = true
+socialShare = true
+delayDisqus = true
+showRelatedPosts = true
+lunrSearch = true
+gcse = false
+lastmod = false
+rss = true
+pagination = "10"
+hideAuthor = false
+description="Your can add your website description here."
+previewCardImagePlacement = "bottom"
+showPostImage = false
+
+[Params.Author]
+  name = "Ryo24"
+  website = "https://www.binovarghese.com/"
+  authorInfo = "Live your life as though every moment matters, because in the end, it's not the years in your life, but the life in your years that counts."
+  authorPostImage = "/img/author-post-img.jpg"
+  # email = "sample@gmail.com"
+  # instagram = "username"
+  # youtube = "user/username" # or channel/channelname
+  twitter = "r0227n"
+  # linkedin = "username"
+  github = "r0227n"
+  # threads = "username"
+  # gitlab = "username"
+  # reddit = "username"
+  # stackoverflow = "users/XXXXXXX/username"
+  # snapchat = "username"
+  # spotify = "username"
+  # paypal = "username"
+  # slack = "username"
+  #bandcamp = "username"
+  #itchio = "username"
+  #vk = "username"
+  #500px = "username"
+  #kaggle = "username"
+  #weibo = "username"
+  #xing = "username"
+  #bitbucket = "username"
+  #soundcloud = "username"
+  # codepen = "username"
+
+[[menu.main]]
+    name = "Home"
+    url = "/"
+    weight = 1
+
+[[menu.main]]
+    name = "Notes"
+    url = "/notes/"
+    weight = 2
+
+[[menu.main]]
+    name = "Tags"
+    url = "/tags/"
+    weight = 3
+
+[[menu.main]]
+    name = "Collections"
+    url = "/collections/"
+    weight = 4
+
+[[menu.main]]
+    name = "About"
+    url = "/about/"
+    weight = 5
+
+
+[sitemap]
+  changefreq = "monthly"
+  priority = 0.5
+  filename = "sitemap.xml"
