Update submodule configuration for lightbi-hugo
* Change the URL for the existing lightbi-hugo submodule to a new repository
* Add a new submodule entry for lightbi-hugo with the updated URL

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/lightbi-hugo"]
 	path = themes/lightbi-hugo
-	url = https://github.com/binokochumolvarghese/lightbi-hugo
+	url = https://github.com/r0227n/lightbi-hugo
+[submodule "lightbi-hugo"]
+	path = lightbi-hugo
+	url = https://github.com/r0227n/lightbi-hugo.git
