--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://lightbi-hugo-theme.netlify.app/""
+baseURL = "https://lightbi-hugo-theme.netlify.app/"
 DefaultContentLanguage = "ja"
 defaultContentLanguageInSubdir = false
 languageCode = "ja-JP"
