update: change baseURL in hugo.toml to new GitHub Pages URL

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://lightbi-hugo-theme.netlify.app/"
+baseURL = "https://r0227n.github.io/loglife/"
 DefaultContentLanguage = "ja"
 defaultContentLanguageInSubdir = false
 languageCode = "ja-JP"
