--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
 [submodule "themes/lightbi-hugo"]
 	path = themes/lightbi-hugo
-	url = https://github.com/r0227n/lightbi-hugo
-[submodule "lightbi-hugo"]
-	path = lightbi-hugo
-	url = https://github.com/r0227n/lightbi-hugo.git
+	url = https://github.com/binokochumolvarghese/lightbi-hugo
