--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://lightbi-hugo-theme.netlify.app/"
+baseURL = "https://r0227n.github.io/loglife/"
 DefaultContentLanguage = "ja"
 defaultContentLanguageInSubdir = false
 languageCode = "ja-JP"
@@ -17,6 +17,16 @@ enableRobotsTXT = true
 enableGitInfo = false
 summaryLength  = "4"
 ignoreLogs = ['warning-goldmark-raw-html']
+
+
+# OGP設定
+[params]
+  # 共有のOGP設定
+  images = ["/images/ogp-default.png"] # デフォルトのOGP画像
+  og_site_name = "LogLife"
+  og_type = "website"
+  twitter_card = "summary_large_image"
+  twitter_site = "@r0227n"
 
 [pagination]
 pagerSize = 6
